--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,98 +1,266 @@
 /* General --> then media query */
-
 /* General/For Everything */
-/* body {
+body {
     width: 100%;
-   max-width: 100vw;
-   margin: auto;
-   overflow-x: hidden;
-   font-size: 1.4rem;
-   height: auto;
-   background-image:
-   font-family: 
-} */
+    max-width: 100vw;
+    margin: auto;
+    overflow-x: hidden;
+    font-size: 1.2rem;
+    height: auto;
+    background-color: var(--blue-munsell , --electric-blue);
+    font-family: 'Roboto', sans-serif; 
+}
 
 :root {
-    --indigo-dye: #023B58;
-    --blue-munsell: #0091AD;
-    --electric-blue: #6EFAFB;
+    --indigo-dye:#023B58;
+    --blue-munsell:#0091AD;
+    --electric-blue:#6EFAFB;
     --cosmic-latte:#FFF4E4;
     --medium-champagne:#F7E8A4;
     --hot-pink:#FF57BB;
     --heliotrope-gray:#023B58;
-    /* the gradient */
-    /* color: var(--);
-    color: var(--); */
-}
+    color: var(--blue-munsell);
+    color: var(--electric-blue);
+};
 
-/* Test Code 3-9-22 [DOES WORK] */
-/* section {
-    background-color: #F7E8A4;
-} */
-
-/* CP Replika */
-/* One long comment - from line 10 to 64, when you uncomment */
-/* h1, h2, p {
-
+.grad {
+    height: auto;
+    background-color: var(--blue-munsell , --electric-blue);
 }
 
 img {
-
+    width: 100px;
 }
 
 header {
-
-}
-
-footer {
-
-}
-
-.border {
-    Define the class
-}
-
-h3 {
-
-}
-
-.nav.bar {
-    Define the class
+    background-color: var(--medium-champagne);
+    width: auto;
+    padding-left: 25px; 
+    border-bottom: solid 5px var(--heliotrope-gray);
+    font-family: 'Fredericka the Great', cursive;
 }
 
 .link-styling {
-    Define the class
+    padding: 0.2%;
 }
 
+.link-styling a:link {
+    color: var(--heliotrope-gray);
+    text-decoration: none;
+}
+
+.link-styling a:visited {
+    color: var(--heliotrope-gray);
+    text-decoration: none;
+}
+
+.link-styling a:hover {
+    color: var(--blue-munsell);
+    font-weight: bold;
+}
+
+.link-styling a:active {
+    color: var(--cosmic-latte);
+    background-color: var(--hot-pink);
+    font-weight: bold;} 
+
 .content-container {
-    Define the class
+    margin: 60px;
+    padding: 10px;
+    border-top: solid 5px var(--indigo-dye);
+    border-right: solid 5px var(--indigo-dye);
+    border-bottom: solid 5px var(--indigo-dye);
+    border-left: solid 5px var(--indigo-dye);
+    background-color: var(--cosmic-latte);
+    color: var(--indigo-dye);
 }
 
 .content-container-2 {
-    Define the class
+    margin: 30px;
+    padding: 20px;
+    border-top: solid 5px var(--indigo-dye);
+    border-right: solid 5px var(--indigo-dye);
+    border-bottom: solid 5px var(--indigo-dye);
+    border-left: solid 5px var(--indigo-dye);
+    background-color: var(--cosmic-latte);
+    color: var(--indigo-dye);
+    list-style-type: none;
+    text-align: left;
+    display: flex; 
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
+/* .center-text */
+h1 {
+    text-align: center;
+    margin: 10px auto;
+    padding: 0, 10px;
+    font-style: italic;
+    font-family: 'Fredericka the Great', cursive;
+} 
+
+/* .center-text */
+h2, p { 
+    text-align: center;
+    margin: 10px auto;
+    padding: 0, 10px;
+    font-family: 'Roboto', sans-serif;
+}
+
+/* FOR THE P TAGS */
 .center-text {
-    Define the class
+    text-align: center;
+} 
+
+.center-text > li {
+    list-style-type: none;
+    text-align: center;
+} 
+
+.right-text > li {
+    list-style-type: none;
+    text-align: right;
+    padding-right: 5%;
+} 
+
+footer {
+    background-color: var(--hot-pink);
+    width: auto;
+    color: var(--cosmic-latte);
+    padding-left: 2.5%;
+    font-size: 1rem;
+    border-top: solid 5px var(--heliotrope-gray);
+    font-family: 'Roboto', sans-serif;
 }
 
-table {
-
+.border {
+    list-style-type: none;
+    text-align: left;
+    display: flex; 
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
-button-styling {
-
+/* for FORMS --> */
+.mini-container-form {
+    margin: auto;
+    padding: 5px;
+    text-align: center;
 }
 
+/* for the headers in the footer */
 .mini-container {
-    Define the class
+    margin: auto;
+    padding: 10px;
+    text-align: center;
+    border: solid 5px var(--cosmic-latte);
+    background-color: var(--medium-champagne);
+    color: var(--heliotrope-gray);
+} 
+
+.nav.bar li {
+    list-style-type: none;
+    display: inline-block;
+    margin: 10px 20px;
+    padding: 10px 20px;
+    text-align: center;
+    font-family: 'Fredericka the Great', cursive;
+}
+
+.yellow-button {
+    background-color: var(--medium-champagne);
+}
+
+.center-button {
+    display: flex; 
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+} 
+
+/* Font Awesome */
+fa-brands {
+    color: var(--medium-champagne);
+}
+
+fieldset {
+    display: block;
+    border-color: var(--cosmic-latte);
+}
+
+/* ABOVE DONE */
+
+/* READY TO INSERT */
+
+
+
+/* BELOW TO WORK ON */
+/* CP Replika */
+/* PHOTO GALLERY */
+/* table {
+
 } */
 
-/* Get the CSS for form styling */
+/* button-styling {
+
+} */
+
+/* IDK WE'LL SEE */
+/* h3 {
+
+} */
+
+
+
+
+
 
 /* Media Query --> specific parameters for css code to operate in */
 /* Mobile Design [mobile container] */
-@media screen and (min-width: 320px) and (max-width: 768px) {}
+
+@media screen and (min-width: 320px) and (max-width: 768px) {
+.mobile-container {
+    display: flex;
+}
+
+.mobile-container > .nav-bar {
+    display: none;
+}
+    /* .mobile-container > .hamburger {
+    overflow: visible;
+    position: relative;
+    padding: 14px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: flex-end;
+    align-items: flex-end;
+    } */
+    
+    /* the LAST thing is enforced --> cascading */
+
+    /* border > div {
+    background-color: var(--blue);
+    width: auto;
+    color: var(--white);
+    min-width: 420px;
+    margin: auto;
+    overflow: visible;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    } */
+}
+
 
 /* Tablet Design [hamburger] */
-@media screen and (min-width: 768px) and (max-width: 1024px) {}
+/* @media screen and (min-width: 768px) and (max-width: 1024px) {} */
+
+/* section {
+     background-color:var(--light-teal); 
+} */
