--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -18,14 +18,14 @@
         <!-- Updated Code 4-25 re: Hamburger Functionality [tested] -->
         <div class="header-wrapper">
             <div class = "link-styling mobile-container">
-                <a href="index.html"></a><img src ="public/images/Cookie-logo.png" alt="A picture of an animal, with a cat-like smiling face with a turtle's body is the logo of this website.">
+                <a href="/"></a><img src ="/images/Cookie-logo.png" alt="A picture of an animal, with a cat-like smiling face with a turtle's body is the logo of this website.">
                 </a>
             </div>
             <nav class="nav-bar link-styling open-sesame"> 
                 <ul class="nav-bar-list left-text-line-items">
-                    <li><a href="index.html">Index</a></li>
-                    <li><a href="videogallery.html">About</a></li>
-                    <li><a href="login.html">Login</a></li>
+                    <li><a href="/">Index</a></li>
+                    <li><a href="/videogallery">About</a></li>
+                    <li><a href="/login">Login</a></li>
                 </ul>
             </nav>
             <div class = "link-styling mobile-container">
@@ -44,22 +44,22 @@
     <section class="content-container-2">
         <!-- Content Outline Here based off page needs -->
         <p class="expansion">Map of the Globe</p>
-        <a href="#"></a><img src="public/images/map-image.png" class="photo-image" alt="Image of a United States map with pins in it">
+        <a href="/views/pages/map"></a><img src="/images/map-image.png" class="photo-image" alt="Image of a United States map with pins in it">
     </section>
     <section class="content-container-2">
         <!-- Content Outline Here based off page needs -->
         <p class="expansion">Photo Gallery</p>
-        <a href="#"></a><img src="public/images/photo-gallery.jpeg" class="photo-image" alt="A picture of a scrapbook titled 'My Adventure Book'.">
+        <a href="/views/pages/photogallery"></a><img src="/images/photo-gallery.jpeg" class="photo-image" alt="A picture of a scrapbook titled 'My Adventure Book'.">
     </section>
     <section class="content-container-2">
         <!-- Content Outline Here based off page needs -->
         <p class="expansion">Video Showcase of Practitioners</p>
-        <a href="#"></a><img src="public/images/comeout_videos_image.webp" class="photo-image" alt="There is a stock image of the Youtube icon in rainbow colors superimposed on the 'Progress Pride Flag.'">
+        <a href="/views/pages/videogallery"></a><img src="./images/comeout_videos_image.webp" class="photo-image" alt="There is a stock image of the Youtube icon in rainbow colors superimposed on the 'Progress Pride Flag.'">
     </section>
     <section class="content-container-2">
         <!-- Content Outline Here based off page needs -->
         <p class="expansion">Contact Us</p>
-        <a href="#"></a><img src="public/images/contact-us.jpeg" class= "photo-image" alt="On a black chalkboard, there is a depiction of an envelope, a phone and the at symbol over the word 'Contact Us', near a hand with chalk in the person's fingertips.">
+        <a href="/views/pages/contactus"></a><img src="/images/contact-us.jpeg" class= "photo-image" alt="On a black chalkboard, there is a depiction of an envelope, a phone and the at symbol over the word 'Contact Us', near a hand with chalk in the person's fingertips.">
     </section>
 </div>
 <footer class = "footer"> 
@@ -69,14 +69,14 @@
                 <h2 class = "mini-container">Developer Contact Info</h2>
                 <p class ="center-text-paragraph">A Product of CodeSquad</p>
                 <ul class="center-text-line-items link-styling">
-                    <li><a href="http://codesquad.org" target="'_blank"><img src="public/images/CodeSquad-website-logo.png"alt="CodeSquad.org Logo"></a></li>
-                    <li><a href="#">
+                    <li><a href="http://codesquad.org" target="'_blank"><img src="/images/CodeSquad-website-logo.png"alt="CodeSquad.org Logo"></a></li>
+                    <li><a href="/">
                         <i class="fa-brands fa-facebook-square"></i>
                     </a></li>
-                    <li><a href="#">
+                    <li><a href="/">
                         <i class="fa-brands fa-instagram-square"></i>
                     </a></li>
-                    <li><a href="#">
+                    <li><a href="/">
                         <i class="fa-brands fa-twitter"></i>
                     </a></li>
                     <li>Developer: Kit Fenrir Amreik (they/she)</li>
