link conversion/creating partials

--- a/views/pages/videogallery.ejs
+++ b/views/pages/videogallery.ejs
@@ -18,14 +18,14 @@
         <!-- Updated Code 4-25 re: Hamburger Functionality [tested] -->
         <div class="header-wrapper">
             <div class = "link-styling mobile-container">
-                <a href="index.html"></a><img src ="public/images/Cookie-logo.png" alt="A picture of an animal, with a cat-like smiling face with a turtle's body is the logo of this website.">
+                <a href="/"></a><img src ="/images/Cookie-logo.png" alt="A picture of an animal, with a cat-like smiling face with a turtle's body is the logo of this website.">
                 </a>
             </div>
             <nav class="nav-bar link-styling open-sesame"> 
                 <ul class="nav-bar-list left-text-line-items">
-                    <li><a href="index.html">Index</a></li>
-                    <li><a href="videogallery.html">About</a></li>
-                    <li><a href="login.html">Login</a></li>
+                    <li><a href="/">Index</a></li>
+                    <li><a href="/videogallery">About</a></li>
+                    <li><a href="/login">Login</a></li>
                 </ul>
             </nav>
             <div class = "link-styling mobile-container">
@@ -43,7 +43,7 @@
     <!-- Content Outline Here based off page needs -->
     </section>
     <section class="content-container-2">
-        <a href="#"></a><img src="public/images/comeout_videos_image.webp" class="photo-image" alt="There is a stock image of the Youtube icon in rainbow colors superimposed on the 'Progress Pride Flag.'">
+        <a href="/views/pages/videogallery"></a><img src="./images/comeout_videos_image.webp" class="photo-image" alt="There is a stock image of the Youtube icon in rainbow colors superimposed on the 'Progress Pride Flag.'">
     </section>
     <section class="content-container-2">
         <p>This is a potential summary/synopsis about the video being showcased here. There may be a transcript provided. In addition, there may be other pertinent information here.
@@ -57,14 +57,14 @@
                 <h2 class = "mini-container">Developer Contact Info</h2>
                 <p class ="center-text-paragraph">A Product of CodeSquad</p>
                 <ul class="center-text-line-items link-styling">
-                    <li><a href="http://codesquad.org" target="'_blank"><img src="public/images/CodeSquad-website-logo.png"alt="CodeSquad.org Logo"></a></li>
-                    <li><a href="#">
+                    <li><a href="http://codesquad.org" target="'_blank"><img src="/images/CodeSquad-website-logo.png" alt="CodeSquad.org Logo"></a></li>
+                    <li><a href="/">
                         <i class="fa-brands fa-facebook-square"></i>
                     </a></li>
-                    <li><a href="#">
+                    <li><a href="/">
                         <i class="fa-brands fa-instagram-square"></i>
                     </a></li>
-                    <li><a href="#">
+                    <li><a href="/">
                         <i class="fa-brands fa-twitter"></i>
                     </a></li>
                     <li>Developer: Kit Fenrir Amreik (they/she)</li>
@@ -100,7 +100,7 @@
             </div>
             <div class="foot-bar">
                 <h2 class = "mini-container">Talk to Us :]</h2>
-                <form action="#">
+                <form action="/">
                     <legend>
                         <fieldset>
                             <label for="First and Last Name">First and Last Name:</label>
