--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,42 +1,8 @@
-<!DOCTYPE html>
-<head>
-    <html lang="en">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/032df15d1f.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="./styles/styles.css">
-    <script defer src="./scripts/scripts.js"></script>
-</head>
-<body>
+<%- include('../partials/head') -%> 
+<!-- Insert header.ejs -->
     <title>Index Page</title>
-    <header>
-        <!-- Updated Code 4-25 re: Hamburger Functionality [tested] -->
-        <div class="header-wrapper">
-            <div class = "link-styling mobile-container">
-                <a href="/"></a><img src ="/images/Cookie-logo.png" alt="A picture of an animal, with a cat-like smiling face with a turtle's body is the logo of this website.">
-                </a>
-            </div>
-            <nav class="nav-bar link-styling open-sesame"> 
-                <ul class="nav-bar-list left-text-line-items">
-                    <li><a href="/">Index</a></li>
-                    <li><a href="/videogallery">About</a></li>
-                    <li><a href="/login">Login</a></li>
-                </ul>
-            </nav>
-            <div class = "link-styling mobile-container">
-                <button class = "hamburger">
-                    <a href="javascript:void(0);" class="menu" for="open-sesame">
-                        <i class="fa fa-bars"></i>
-                    </a>
-                </button> 
-            </div>
-        </div>
-    </header>
+<%- include('../partials/nav') -%> 
+<!-- Insert nav.ejs -->
 <div class="content-container">
     <section class="content-container-section">
         <h1>Index Page</h1>
@@ -62,6 +28,8 @@
         <a href="/views/pages/contactus"></a><img src="/images/contact-us.jpeg" class= "photo-image" alt="On a black chalkboard, there is a depiction of an envelope, a phone and the at symbol over the word 'Contact Us', near a hand with chalk in the person's fingertips.">
     </section>
 </div>
+<!-- Insert footer.ejs -->
+<%- include('../partials/footer') -%> 
 <footer class = "footer"> 
     <section class = "bottom-row"> 
         <div class = "border"> 
@@ -69,7 +37,7 @@
                 <h2 class = "mini-container">Developer Contact Info</h2>
                 <p class ="center-text-paragraph">A Product of CodeSquad</p>
                 <ul class="center-text-line-items link-styling">
-                    <li><a href="http://codesquad.org" target="'_blank"><img src="/images/CodeSquad-website-logo.png"alt="CodeSquad.org Logo"></a></li>
+                    <li><a href="http://codesquad.org" target="'_blank"><img src="/images/CodeSquad-website-logo.png" alt="CodeSquad.org Logo"></a></li>
                     <li><a href="/">
                         <i class="fa-brands fa-facebook-square"></i>
                     </a></li>
@@ -112,7 +80,7 @@
             </div>
             <div class="foot-bar">
                 <h2 class = "mini-container">Talk to Us :]</h2>
-                <form action="#">
+                <form action="/">
                     <legend>
                         <fieldset>
                             <label for="First and Last Name">First and Last Name:</label>
