--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -18,14 +18,14 @@
         <!-- Updated Code 4-25 re: Hamburger Functionality [tested] -->
         <div class="header-wrapper">
             <div class = "link-styling mobile-container">
-                <a href="index.html"></a><img src ="public/images/Cookie-logo.png" alt="A picture of an animal, with a cat-like smiling face with a turtle's body is the logo of this website.">
+                <a href="/"></a><img src ="/images/Cookie-logo.png" alt="A picture of an animal, with a cat-like smiling face with a turtle's body is the logo of this website.">
                 </a>
             </div>
             <nav class="nav-bar link-styling open-sesame"> 
                 <ul class="nav-bar-list left-text-line-items">
-                    <li><a href="index.html">Index</a></li>
-                    <li><a href="videogallery.html">About</a></li>
-                    <li><a href="login.html">Login</a></li>
+                    <li><a href="/">Index</a></li>
+                    <li><a href="/videogallery">About</a></li>
+                    <li><a href="/login">Login</a></li>
                 </ul>
             </nav>
             <div class = "link-styling mobile-container">
@@ -43,7 +43,7 @@
     <!-- Content Outline Here based off page needs -->
     </section>
     <section class="content-container-2">
-        <form action="#">
+        <form action="/">
             <legend>
                 <fieldset>
                     <label for="Email">Email Address</label>
@@ -69,14 +69,14 @@
                 <h2 class = "mini-container">Developer Contact Info</h2>
                 <p class ="center-text-paragraph">A Product of CodeSquad</p>
                 <ul class="center-text-line-items link-styling">
-                    <li><a href="http://codesquad.org" target="'_blank"><img src="public/images/CodeSquad-website-logo.png"alt="CodeSquad.org Logo"></a></li>
-                    <li><a href="#">
+                    <li><a href="http://codesquad.org" target="'_blank"><img src="/images/CodeSquad-website-logo.png"alt="CodeSquad.org Logo"></a></li>
+                    <li><a href="/">
                         <i class="fa-brands fa-facebook-square"></i>
                     </a></li>
-                    <li><a href="#">
+                    <li><a href="/">
                         <i class="fa-brands fa-instagram-square"></i>
                     </a></li>
-                    <li><a href="#">
+                    <li><a href="/">
                         <i class="fa-brands fa-twitter"></i>
                     </a></li>
                     <li>Developer: Kit Fenrir Amreik (they/she)</li>
@@ -112,7 +112,7 @@
             </div>
             <div class="foot-bar">
                 <h2 class = "mini-container">Talk to Us :]</h2>
-                <form action="#">
+                <form action="/">
                     <legend>
                         <fieldset>
                             <label for="First and Last Name">First and Last Name:</label>
