--- a/views/pages/photogallery.ejs
+++ b/views/pages/photogallery.ejs
@@ -19,14 +19,14 @@
         <!-- Updated Code 4-25 re: Hamburger Functionality [tested] -->
         <div class="header-wrapper">
             <div class = "link-styling mobile-container">
-                <a href="index.html"></a><img src ="public/images/Cookie-logo.png" alt="A picture of an animal, with a cat-like smiling face with a turtle's body is the logo of this website.">
+                <a href="/"></a><img src ="/images/Cookie-logo.png" alt="A picture of an animal, with a cat-like smiling face with a turtle's body is the logo of this website.">
                 </a>
             </div>
             <nav class="nav-bar link-styling open-sesame"> 
                 <ul class="nav-bar-list left-text-line-items">
-                    <li><a href="index.html">Index</a></li>
-                    <li><a href="videogallery.html">About</a></li>
-                    <li><a href="login.html">Login</a></li>
+                    <li><a href="/">Index</a></li>
+                    <li><a href="/videogallery">About</a></li>
+                    <li><a href="/login">Login</a></li>
                 </ul>
             </nav>
             <div class = "link-styling mobile-container">
@@ -43,7 +43,7 @@
     <h1>Photo Gallery of Practitioners Page</h1>
     </section>
     <section class="content-container-2">
-        <a href="#"></a><img src="public/images/photo-gallery.jpeg" class="photo-image" alt="A picture of a scrapbook titled 'My Adventure Book'.">
+        <a href="/views/pages/photogallery"></a><img src="/images/photo-gallery.jpeg" class="photo-image" alt="A picture of a scrapbook titled 'My Adventure Book'.">
         <div class="content-container-3">
             <p>Hello</p>
         </div>
@@ -51,56 +51,56 @@
     <h2 class="content-container-section title-tinker">A.P Cohort 2021-2023</h2>
     <section class="content-container-2 side-scroll-mobile">
     <div class="card mint">
-        <a href="#"></a><img src="public/images/KIT.jpeg" class="template" alt="a picture of Kit, a Black woman smiling with a Black dress and flowers of varying colors, with a red rose in their right ear">
+        <a href="/"></a><img src="/images/KIT.jpeg" class="template" alt="a picture of Kit, a Black woman smiling with a Black dress and flowers of varying colors, with a red rose in their right ear">
         <div class="card-container">
             <h3><b>Kit Fenrir Amreik (they/she)</b></h3> 
             <p>Global Restorative and Transformative Justice Practitioner, Instructor of A.P. Cohort</p> 
         </div>
     </div>
     <div class="card vivid-sky-blue">
-        <a href="#"></a><img src="public/images/YESI.jpeg" class="template" alt="a picture of Yesinia JJ, a Black person with a pink afro and clear framed glasses looks at the camera">
+        <a href="/"></a><img src="/images/YESI.jpeg" class="template" alt="a picture of Yesinia JJ, a Black person with a pink afro and clear framed glasses looks at the camera">
         <div class="card-container">
             <h3><b>Yesinia JJ (she/her)</b></h3> 
             <p>Accelerated Practitioner Instructor's Assistant & Shadowing/Training  Restorative and Transformative Justice Practitioner</p> 
         </div>
     </div>
     <div class="card gold-crayola">
-        <a href="#"></a><img src="public/images/KRIS.jpg" class="template" alt="a picture of Kristopher JT Toma-Lee, a 35 y/o genderqueer trans guy from Massachusetts. They are holding their phone, wearing a black undershirt and a green and blue shirt.">
+        <a href="/"></a><img src="/images/KRIS.jpg" class="template" alt="a picture of Kristopher JT Toma-Lee, a 35 y/o genderqueer trans guy from Massachusetts. They are holding their phone, wearing a black undershirt and a green and blue shirt.">
         <div class="card-container">
             <h3><b>Kristopher JT Toma-Lee (they/he)</b></h3> 
             <p>Accelerated Practitioner Student - Advanced Semester</p> 
         </div>
     </div>
     <div class="card medium-purple">
-        <a href="#"></a><img src="public/images/CHELSEA.JPEG" class="template" alt="a picture of Chelsea Colby, a White person against a grey background, wearing a blue sweater, and smiling with leopard print glasses.">
+        <a href="/"></a><img src="/images/CHELSEA.JPEG" class="template" alt="a picture of Chelsea Colby, a White person against a grey background, wearing a blue sweater, and smiling with leopard print glasses.">
         <div class="card-container">
             <h3><b>Chelsea Colby (she/they)</b></h3> 
             <p>Accelerated Practitioner Student - Advanced Semester</p> 
         </div>
     </div>
     <div class="card orchid-crayola">
-        <a href="#"></a><img src="public/images/CORI.jpeg" class="template" alt="a picture of Cori Falco, a White person with makeup on against a beach background, smiling with a light blue floral top">
+        <a href="/"></a><img src="/images/CORI.jpeg" class="template" alt="a picture of Cori Falco, a White person with makeup on against a beach background, smiling with a light blue floral top">
         <div class="card-container">
             <h3><b>Cori Falco (she/her)</b></h3> 
             <p>Accelerated Practitioner Student - Advanced Semester</p> 
         </div>
     </div>
     <div class="card mint">
-        <a href="#"></a><img src="public/images/RACHEL.JPG" class="template" alt="a picture of Rachel Freed Sussman, a White person smiling and snuggled in a blanket against a beach background">
+        <a href="/"></a><img src="/images/RACHEL.JPG" class="template" alt="a picture of Rachel Freed Sussman, a White person smiling and snuggled in a blanket against a beach background">
         <div class="card-container">
             <h3><b>Rachel Freed Sussman (any pronoun)</b></h3> 
             <p> Accelerated Practitioner Student - Advanced Semester</p> 
         </div>
     </div>
     <div class="card vivid-sky-blue">
-        <a href="#"></a><img src="public/images/THERESA.jpg" class="template" alt="a picture of Theresa Yannetty, a White person smiling with light makeup coupled with a stuffed animal in a chair">
+        <a href="/"></a><img src="/images/THERESA.jpg" class="template" alt="a picture of Theresa Yannetty, a White person smiling with light makeup coupled with a stuffed animal in a chair">
         <div class="card-container">
             <h3><b>Theresa Yannetty (she/her)</b></h3> 
             <p>Accelerated Practitioner Student - Advanced Semester</p> 
         </div>
     </div>
     <div class="card gold-crayola">
-        <a href="#"></a><img src="public/images/TIM.jpg" class="template" alt="a picture of Timothy Scott Crumley, a [descriptor] smiling with [what are they wearing]">
+        <a href="/"></a><img src="/images/TIM.jpg" class="template" alt="a picture of Timothy Scott Crumley, a White person smiling with a blue shirt, crosslegged against a neutral background">
         <div class="card-container">
             <h3><b>Timothy Scott Crumley (he/him)</b></h3> 
             <p>Accelerated Practitioner Student - Advanced Semester</p> 
@@ -115,14 +115,14 @@
                 <h2 class = "mini-container">Developer Contact Info</h2>
                 <p class ="center-text-paragraph">A Product of CodeSquad</p>
                 <ul class="center-text-line-items link-styling">
-                    <li><a href="http://codesquad.org" target="'_blank"><img src="public/images/CodeSquad-website-logo.png"alt="CodeSquad.org Logo"></a></li>
-                    <li><a href="#">
+                    <li><a href="http://codesquad.org" target="'_blank"><img src="/images/CodeSquad-website-logo.png" alt="CodeSquad.org Logo"></a></li>
+                    <li><a href="/">
                         <i class="fa-brands fa-facebook-square"></i>
                     </a></li>
-                    <li><a href="#">
+                    <li><a href="/">
                         <i class="fa-brands fa-instagram-square"></i>
                     </a></li>
-                    <li><a href="#">
+                    <li><a href="/">
                         <i class="fa-brands fa-twitter"></i>
                     </a></li>
                     <li>Developer: Kit Fenrir Amreik (they/she)</li>
@@ -158,7 +158,7 @@
             </div>
             <div class="foot-bar">
                 <h2 class = "mini-container">Talk to Us :]</h2>
-                <form action="#">
+                <form action="/">
                     <legend>
                         <fieldset>
                             <label for="First and Last Name">First and Last Name:</label>
